# fira

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  fly.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  entrypoint.sh  post-create.sh  post-start.sh
api/: .env.example  Cargo.toml  Dockerfile
api/migrations/: 0001_init.sql  0002_auth.sql  0003_ops.sql  0004_op_log.sql  0005_member_soft_delete.sql  0006_external_url_template.sql  0007_task_external_url.sql  0008_workspaces.sql  0009_workspace_project_roles.sql  0010_processed_ops_durable.sql  0011_user_links.sql  0012_project_owner_role.sql  0013_project_inactive_role.sql  0014_workspace_invites.sql  0015_tags.sql  0016_task_section_someday.sql  0017_task_created_by_and_finished_at.sql  0018_user_settings.sql  0019_gcal_credentials.sql  0020_gcal_events_metadata.sql  0021_session_groups.sql  0022_task_section_recurring.sql  0023_gcal_multi_calendar.sql  0024_attachments.sql
api/src/: attachments.rs  auth.rs  db.rs  ensure_scope.rs  error.rs  gcal.rs  invites.rs  lib.rs  links.rs  main.rs  models.rs  ops.rs  pubsub.rs  seed.rs  storage.rs  workspaces.rs  ws.rs
backend/: Cargo.toml
docs/: about-page.md  spec.md
docs/old/: brief_description.md  fira_design_doc.md
docs/sprints/: 01-scaffold.md  02-interactions.md  03-auth-and-projects.md  04-polish.md  05-sync.md  06-bootstrap-fix-and-dev-seeder.md  07-collab-and-issue-links.md  08-workspaces.md  09-deploy.md  10-websockets.md  11-playground-and-polish.md  12-snapshot-and-subtask-polish.md  13-deletions-and-user-channel.md  14-account-linking-and-personal-overlay.md  15-project-roles-and-mobile-polish.md  16-mobile-touch-drag.md  17-mobile-layout.md  18-mobile-touch-mk2.md  19-email-invites.md  20-time-block-polish.md  21-tags.md  22-task-attribution-and-account-settings.md  23-gcal-events-base.md  24-inbox-polish.md  25-inline-editing.md  26-account-switcher.md  27-stress-testing.md  README.md
scripts/: dev-second-api.sh  dev-stress-api.sh
web/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
web/public/: manifest.webmanifest
web/src/: App.tsx  api.ts  deeplink.ts  hooks.ts  main.tsx  time.ts  types.ts  useLongPress.ts  ws.ts
web/src/components/: AccountSettingsModal.tsx  BrandMark.tsx  CalendarView.tsx  ConfirmDelete.tsx  InboxView.tsx  LinkAccountModal.tsx  Login.tsx  ProjectIcon.tsx  ProjectModal.tsx  Select.tsx  Sidebar.tsx  SyncPill.tsx  TaskModal.tsx  TaskModalDraft.tsx  Toasts.tsx  TopBar.tsx  (+3 more)
(+8 files in other folders)
