[package]
name = "fira-api"
version = "0.1.0"
edition = "2021"
default-run = "fira-api"

[[bin]]
name = "fira-api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[features]
default = ["dev_auth"]
# Enables the dev-only auth endpoints (`/auth/dev-login`, `/auth/dev-seed`)
# and the `DEV_AUTH` env-var read. Off in prod builds (`--no-default-features`).
dev_auth = []

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
rand = "0.8"
base64 = "0.22"
time = "0.3"
cookie = "0.18"
