[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
